bill form gap fixed

--- a/src/styles/records.css
+++ b/src/styles/records.css
@@ -111,6 +111,7 @@
     z-index: 11;
     padding: 40px;
     border-radius: 8px;
+    line-height: 33px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 
     .summary {
@@ -173,7 +174,7 @@
       }
 
       input {
-        padding: 10px;
+        padding: 6px;
         width: 291px;
         border-radius: 6px;
         border: 1px solid grey;
